--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodeOrbit Club</title>
+  <link rel="shortcut icon" href="HAckerina.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
@@ -197,7 +198,7 @@
     <div class="grid">
       <div class="team-card">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-        <h3>Head of Club</h3>
+        <h3>Janak Parmar</h3>
         <p>Main Leader</p>
         <a href="#" target="_blank">Portfolio</a>
         <!-- Paste portfolio link here -->
@@ -218,21 +219,21 @@
       </div>
       <div class="team-card">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-        <h3>Help Head 1</h3>
+        <h3>Garvi Shah</h3>
         <p>Support</p>
         <a href="#" target="_blank">Portfolio</a>
         <!-- Paste portfolio link here -->
       </div>
       <div class="team-card">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-        <h3>Help Head 2</h3>
+        <h3>Manthan Prajapati</h3>
         <p>Support</p>
         <a href="#" target="_blank">Portfolio</a>
         <!-- Paste portfolio link here -->
       </div>
       <div class="team-card">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-        <h3>Help Head 3</h3>
+        <h3>Subham sukla</h3>
         <p>Support</p>
         <a href="#" target="_blank">Portfolio</a>
         <!-- Paste portfolio link here -->
@@ -257,3 +258,4 @@
 </body>
 
 </html>
+
