--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Meet Shah</h3>
         <p>Co-Head (Boys)</p>
-        <a href="#" target="_blank">Portfolio</a>
+        <a href="https://meetshah274.github.io/Portfolio/" target="_blank">Portfolio</a>
         <!-- Paste portfolio link here -->
       </div>
       <div class="team-card">
@@ -258,4 +258,5 @@
 </body>
 
 </html>
+
 
