--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <section id="hero">
     <h1>Welcome to <span style="color:#00aaff;">CodeOrbit</span></h1>
-    <p>Where Fun Meets Technology — Join us for Hackathons, Webinars, and More!</p>
+    <p>Where Ideas Revolves — Join us for Hackathons, Webinars, and More!</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOkqs2ZIxkduTRvsdfoUY3Pk1RtNCHVQqCYwUu-V2X-j9qFg/viewform"
       target="_blank"
       style="background:#145DA0;color:#fff;padding:1rem 2rem;border-radius:10px;text-decoration:none;margin-top:1rem;display:inline-block;">Join
@@ -258,5 +258,6 @@
 </body>
 
 </html>
+
 
 
