--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Namita Shastri</h3>
         <p>Co-Head (Girls)</p>
-        <a href="#" target="_blank">Portfolio</a>
+        <a href="https://namitashastri.github.io/Portfolio/" target="_blank">Portfolio</a>
         <!-- Paste portfolio link here -->
       </div>
       <div class="team-card">
@@ -258,6 +258,7 @@
 </body>
 
 </html>
+
 
 
 
