--- a/index.html
+++ b/index.html
@@ -233,6 +233,13 @@
       </div>
       <div class="team-card">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <h3>Chirayu Patil</h3>
+        <p>Support</p>
+        <a href="#" target="_blank">Portfolio</a>
+        <!-- Paste portfolio link here -->
+      </div>
+      <div class="team-card">
+        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Subham sukla</h3>
         <p>Support</p>
         <a href="#" target="_blank">Portfolio</a>
@@ -258,6 +265,7 @@
 </body>
 
 </html>
+
 
 
 
