--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>📧 Official Email: codeorbit01@gmail.com</p>
-    <p>👦 Meet Shah - 9427720563 - smeet2880@gmail.com</p>
+    <p>Janak Parmar - 9427720563 - ghjm@emal.com</p>
+    <p>Meet Shah - 9427720563 - meet.shah@itmbu.ac.in</p>
+    <p>Namita Shastri - 9427720563 - namita.shastri@itmbu.ac.in</p>
     <div>
       <a href="https://www.instagram.com/codeorbitt" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://discord.gg/ZZR7dfNV" target="_blank"><i class="fab fa-discord"></i></a>
@@ -265,6 +267,7 @@
 </body>
 
 </html>
+
 
 
 
