--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       target="_blank"
       style="background:#145DA0;color:#fff;padding:1rem 2rem;border-radius:10px;text-decoration:none;margin-top:1rem;display:inline-block;">Join
       Us (Free)</a>
+    <iframe width="640px" height="480px" src="https://forms.office.com/r/AwUWTvJBu2?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
   </section>
 
   <section id="events">
@@ -267,6 +268,7 @@
 </body>
 
 </html>
+
 
 
 
