--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <section id="hero">
     <h1>Welcome to <span style="color:#00aaff;">CodeOrbit</span></h1>
     <p>Where Ideas Revolves — Join us for Hackathons, Webinars, and More!</p>
-    <a href="https://forms.office.com/Pages/ResponsePage.aspx"
+    <a href="https://forms.office.com/pages/responsepage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__ngUxvZUN1NUTzZGVEZaMUtVSUUxM0dPWDE4U0E2NS4u&origin=QRCode&route=shorturl"
       target="_blank"
       style="background:#145DA0;color:#fff;padding:1rem 2rem;border-radius:10px;text-decoration:none;margin-top:1rem;display:inline-block;">Join
       Us (Free)</a>
@@ -268,6 +268,7 @@
 </body>
 
 </html>
+
 
 
 
