--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>📧 Official Email: codeorbit01@gmail.com</p>
-    <p>Janak Parmar - ghjm@emal.com</p>
+    <p>Janak Parmar - janak.parmar@itmbu.ac.in</p>
     <p>Meet Shah - meet.shah@itmbu.ac.in</p>
     <p>Namita Shastri - namita.shastri@itmbu.ac.in</p>
     <div>
@@ -267,6 +267,7 @@
 </body>
 
 </html>
+
 
 
 
