--- a/index.html
+++ b/index.html
@@ -2,21 +2,44 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CodeOrbit Club</title>
   <link rel="shortcut icon" href="HAckerina.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    body {
+    /* ===== Global Styles ===== */
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #000000;
-      color: #fff;
+      padding: 0;
     }
 
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(circle at top left, #000000, #020a14, #0B1E33);
+      color: #fff;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+    }
+
+    h1,
+    h2,
+    h3 {
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* ===== Header ===== */
     header {
-      background: linear-gradient(90deg, #000000, #0B1E33, #145DA0);
+      background: rgba(10, 20, 40, 0.9);
+      backdrop-filter: blur(10px);
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -24,41 +47,98 @@
       position: sticky;
       top: 0;
       z-index: 1000;
+      border-bottom: 1px solid rgba(0, 170, 255, 0.3);
+      box-shadow: 0 2px 15px rgba(0, 170, 255, 0.1);
     }
 
     header img {
-      height: 60px;
+      height: 55px;
+      filter: drop-shadow(0 0 6px #00aaff);
     }
 
     nav a {
       color: #fff;
       margin: 0 1rem;
-      text-decoration: none;
       font-weight: 600;
+      position: relative;
       transition: 0.3s;
     }
 
-    nav a:hover {
-      color: #00aaff;
+    nav a::after {
+      content: "";
+      position: absolute;
+      width: 0%;
+      height: 2px;
+      bottom: -5px;
+      left: 0;
+      background: #00aaff;
+      transition: 0.3s;
     }
 
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    /* ===== Hero Section ===== */
+    #hero {
+      text-align: center;
+      padding: 6rem 2rem;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.4), #000);
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    #hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      background: linear-gradient(90deg, #00aaff, #66ccff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 15px rgba(0, 170, 255, 0.3);
+    }
+
+    #hero p {
+      font-size: 1.2rem;
+      color: #ddd;
+      margin-bottom: 2rem;
+    }
+
+    #hero a {
+      background: linear-gradient(90deg, #00aaff, #145DA0);
+      padding: 1rem 2rem;
+      border-radius: 12px;
+      font-weight: 600;
+      color: #fff;
+      box-shadow: 0 0 15px rgba(0, 170, 255, 0.4);
+      transition: all 0.3s ease;
+    }
+
+    #hero a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px rgba(0, 170, 255, 0.8);
+    }
+
+    /* ===== Sections ===== */
     section {
       padding: 4rem 2rem;
       text-align: center;
+      animation: fadeUp 1.2s ease;
     }
 
     h2 {
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
+      font-size: 2.4rem;
+      margin-bottom: 1.5rem;
       color: #00aaff;
+      text-shadow: 0 0 12px rgba(0, 170, 255, 0.5);
     }
 
     p {
       max-width: 700px;
       margin: auto;
       line-height: 1.6;
+      color: #ddd;
     }
 
+    /* ===== Grid ===== */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -66,27 +146,39 @@
       margin-top: 2rem;
     }
 
+    /* ===== Cards ===== */
     .card {
-      background: #0B1E33;
+      background: rgba(10, 25, 45, 0.9);
       border-radius: 15px;
       padding: 1.5rem;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-      transition: 0.3s;
+      box-shadow: 0 0 15px rgba(0, 170, 255, 0.15);
+      transition: 0.3s ease;
+      border: 1px solid rgba(0, 170, 255, 0.1);
     }
 
     .card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px);
+      box-shadow: 0 0 25px rgba(0, 170, 255, 0.4);
     }
 
     .card img {
       width: 100%;
-      border-radius: 10px;
+      border-radius: 12px;
+      margin-bottom: 1rem;
     }
 
+    /* ===== Team Cards ===== */
     .team-card {
-      background: #111;
-      padding: 2rem;
+      background: rgba(20, 35, 60, 0.9);
+      padding: 2rem 1rem;
       border-radius: 15px;
+      transition: 0.3s;
+      border: 1px solid rgba(0, 170, 255, 0.1);
+    }
+
+    .team-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 25px rgba(0, 170, 255, 0.3);
     }
 
     .team-card img {
@@ -94,62 +186,135 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
+      border: 3px solid #00aaff;
       margin-bottom: 1rem;
+      transition: 0.3s;
+    }
+
+    .team-card img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(0, 170, 255, 0.6);
     }
 
     .team-card h3 {
       margin: 0.5rem 0;
-    }
-
-    .team-card p {
-      margin-bottom: 1rem;
+      color: #00aaff;
     }
 
     .team-card a {
-      background: #145DA0;
+      background: linear-gradient(90deg, #00aaff, #145DA0);
       color: #fff;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 1.2rem;
       border-radius: 8px;
       text-decoration: none;
+      transition: 0.3s;
+      font-weight: 600;
     }
 
     .team-card a:hover {
-      background: #00aaff;
+      background: linear-gradient(90deg, #00ccff, #1f8fff);
+      box-shadow: 0 0 15px rgba(0, 170, 255, 0.5);
     }
 
-    footer {
-      background: #0B1E33;
-      text-align: center;
-      padding: 2rem;
-      margin-top: 3rem;
+    /* ===== Textarea ===== */
+    textarea {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(0, 170, 255, 0.3);
+      color: #fff;
+      resize: none;
+      margin-top: 1rem;
+      font-family: 'Poppins', sans-serif;
     }
 
-    footer a {
+    textarea::placeholder {
+      color: #aaa;
+    }
+
+    /* ===== Contact ===== */
+    #contact i {
+      font-size: 1.8rem;
+      margin: 1rem;
       color: #00aaff;
-      margin: 0 0.5rem;
-      font-size: 1.3rem;
+      transition: 0.3s;
+    }
+
+    #contact i:hover {
+      color: #1f8fff;
+      transform: scale(1.2);
+      text-shadow: 0 0 15px #00aaff;
+    }
+
+    /* ===== Footer ===== */
+    footer {
+      background: rgba(10, 20, 40, 0.9);
+      text-align: center;
+      padding: 1.5rem;
+      border-top: 1px solid rgba(0, 170, 255, 0.3);
+    }
+
+    footer p {
+      color: #aaa;
+      font-size: 0.9rem;
+    }
+
+    /* ===== Animations ===== */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* ===== Responsive ===== */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+      }
+
+      nav {
+        margin-top: 1rem;
+      }
+
+      #hero h1 {
+        font-size: 2.2rem;
+      }
     }
   </style>
 </head>
 
 <body>
   <header>
-    <img src="HAckerina.png" alt="CodeOrbit Logo">
+    <img src="HAckerina.png" alt="CodeOrbit Logo" />
     <nav>
       <a href="#events">Events</a>
       <a href="#activities">Activities</a>
-      <a href="#team">Our Team</a>
+      <a href="#team">Team</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <section id="hero">
     <h1>Welcome to <span style="color:#00aaff;">CodeOrbit</span></h1>
-    <p>Where Ideas Revolves — Join us for Hackathons, Webinars, and More!</p>
+    <p>Where Ideas Revolve — Join us for Hackathons, Webinars & Tech Events!</p>
     <a href="https://forms.office.com/pages/responsepage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__ngUxvZUN1NUTzZGVEZaMUtVSUUxM0dPWDE4U0E2NS4u&origin=QRCode&route=shorturl"
-      target="_blank"
-      style="background:#145DA0;color:#fff;padding:1rem 2rem;border-radius:10px;text-decoration:none;margin-top:1rem;display:inline-block;">Join
-      Us (Free)</a>
+      target="_blank">Join Us (Free)</a>
   </section>
 
   <section id="events">
@@ -158,17 +323,17 @@
       <div class="card">
         <img src="hackathon.jpg" alt="Hackathon">
         <h3>Hackathons</h3>
-        <p>Mini & Large Hackathons to showcase coding talent.</p>
+        <p>Mini & Major hackathons to showcase your coding potential.</p>
       </div>
       <div class="card">
         <img src="UI-UX.webp" alt="UI/UX Webinar">
         <h3>UI/UX Webinar</h3>
-        <p>Expert sessions on UI/UX design principles.</p>
+        <p>Interactive sessions on UI/UX design & creativity.</p>
       </div>
       <div class="card">
         <img src="tech.jpg" alt="Tech Talks">
-        <h3>Fun & Tech Talks</h3>
-        <p>Interactive talks by Meet Shah and other speakers.</p>
+        <h3>Tech Talks</h3>
+        <p>Fun & informative discussions with brilliant speakers.</p>
       </div>
     </div>
   </section>
@@ -200,57 +365,56 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Janak Parmar</h3>
         <p>Main Leader</p>
-        <a href="#" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
+        <a href="#">Portfolio</a>
       </div>
       <div class="team-card">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Meet Shah</h3>
         <p>Co-Head (Boys)</p>
         <a href="https://meetshah274.github.io/Portfolio/" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
       </div>
       <div class="team-card">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Namita Shastri</h3>
         <p>Co-Head (Girls)</p>
         <a href="https://namitashastri.github.io/Portfolio/" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
       </div>
       <div class="team-card">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Garvi Shah</h3>
         <p>Support</p>
-        <a href="#" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
+        <a href="#">Portfolio</a>
       </div>
       <div class="team-card">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Manthan Prajapati</h3>
         <p>Support</p>
-        <a href="#" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
+        <a href="#">Portfolio</a>
       </div>
       <div class="team-card">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Chirayu Patil</h3>
         <p>Support</p>
-        <a href="#" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
+        <a href="#">Portfolio</a>
       </div>
       <div class="team-card">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-        <h3>Subham sukla</h3>
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <h3>Subham Sukla</h3>
         <p>Support</p>
-        <a href="#" target="_blank">Portfolio</a>
-        <!-- Paste portfolio link here -->
+        <a href="#">Portfolio</a>
       </div>
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>📧 Official Email: codeorbit01@gmail.com</p>
+    <p>📧 codeorbit01@gmail.com</p>
     <p>Janak Parmar - janak.parmar@itmbu.ac.in</p>
     <p>Meet Shah - meet.shah@itmbu.ac.in</p>
     <p>Namita Shastri - namita.shastri@itmbu.ac.in</p>
@@ -265,20 +429,4 @@
     <p>© 2025 CodeOrbit Club. All Rights Reserved.</p>
   </footer>
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
