--- a/index.html
+++ b/index.html
@@ -405,6 +405,13 @@
       <div class="team-card">
         <img
           src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+        <h3>Hitesh Bharwad</h3>
+        <p>Support</p>
+        <a href="#">Portfolio</a>
+      </div>
+      <div class="team-card">
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Subham Sukla</h3>
         <p>Support</p>
         <a href="#">Portfolio</a>
@@ -430,3 +437,4 @@
   </footer>
 </body>
 </html>
+
