--- a/index.html
+++ b/index.html
@@ -9,176 +9,227 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    /* ===== Global Styles ===== */
+    /* ==============================
+       GLOBAL THEME
+    ===============================*/
+    :root {
+      --primary: #00aaff;
+      --secondary: #145DA0;
+      --dark: #0B1E33;
+      --bg: #000814;
+      --light: #d6eaff;
+    }
+
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: radial-gradient(circle at top left, #000000, #020a14, #0B1E33);
-      color: #fff;
+      background: radial-gradient(circle at 30% 20%, #001226, #000814);
+      color: var(--light);
       overflow-x: hidden;
-      scroll-behavior: smooth;
+      position: relative;
     }
 
-    h1,
-    h2,
-    h3 {
-      font-weight: 700;
-      letter-spacing: 1px;
+    /* Floating Glow Background */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, rgba(0, 170, 255, 0.1) 0%, transparent 70%),
+                  radial-gradient(circle at 80% 20%, rgba(20, 93, 160, 0.1) 0%, transparent 70%);
+      animation: floatBG 12s ease-in-out infinite alternate;
+      z-index: -1;
     }
 
-    a {
-      text-decoration: none;
-      color: inherit;
+    @keyframes floatBG {
+      from {
+        transform: translate(0, 0);
+      }
+
+      to {
+        transform: translate(-10%, -10%);
+      }
     }
 
-    /* ===== Header ===== */
+    /* ==============================
+       HEADER / NAVBAR
+    ===============================*/
     header {
-      background: rgba(10, 20, 40, 0.9);
+      background: rgba(5, 15, 30, 0.85);
       backdrop-filter: blur(10px);
-      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 1rem 2rem;
       position: sticky;
       top: 0;
       z-index: 1000;
       border-bottom: 1px solid rgba(0, 170, 255, 0.3);
-      box-shadow: 0 2px 15px rgba(0, 170, 255, 0.1);
+      box-shadow: 0 4px 25px rgba(0, 170, 255, 0.1);
+      transition: 0.3s ease;
     }
 
     header img {
       height: 55px;
-      filter: drop-shadow(0 0 6px #00aaff);
+      filter: drop-shadow(0 0 8px var(--primary));
+      transition: 0.3s;
+    }
+
+    header img:hover {
+      transform: scale(1.05);
     }
 
     nav a {
-      color: #fff;
+      color: var(--light);
       margin: 0 1rem;
       font-weight: 600;
       position: relative;
       transition: 0.3s;
     }
 
-    nav a::after {
+    nav a::before {
       content: "";
       position: absolute;
+      bottom: -6px;
+      left: 0;
       width: 0%;
       height: 2px;
-      bottom: -5px;
-      left: 0;
-      background: #00aaff;
-      transition: 0.3s;
+      background: var(--primary);
+      transition: width 0.3s ease;
     }
 
-    nav a:hover::after {
+    nav a:hover {
+      color: var(--primary);
+    }
+
+    nav a:hover::before {
       width: 100%;
     }
 
-    /* ===== Hero Section ===== */
+    /* ==============================
+       HERO SECTION
+    ===============================*/
     #hero {
       text-align: center;
-      padding: 6rem 2rem;
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0.4), #000);
-      animation: fadeIn 1s ease-in-out;
+      padding: 6rem 2rem 5rem;
+      animation: fadeIn 1.5s ease;
+      background: radial-gradient(circle at center, rgba(0, 170, 255, 0.05), transparent);
     }
 
     #hero h1 {
       font-size: 3rem;
-      margin-bottom: 1rem;
-      background: linear-gradient(90deg, #00aaff, #66ccff);
+      font-weight: 700;
+      background: linear-gradient(90deg, #00aaff, #33ccff, #0099ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 15px rgba(0, 170, 255, 0.3);
+      margin-bottom: 1rem;
+      text-shadow: 0 0 30px rgba(0, 170, 255, 0.3);
     }
 
     #hero p {
+      color: #cfefff;
       font-size: 1.2rem;
-      color: #ddd;
       margin-bottom: 2rem;
     }
 
     #hero a {
-      background: linear-gradient(90deg, #00aaff, #145DA0);
-      padding: 1rem 2rem;
-      border-radius: 12px;
-      font-weight: 600;
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: #fff;
-      box-shadow: 0 0 15px rgba(0, 170, 255, 0.4);
-      transition: all 0.3s ease;
+      padding: 1rem 2.5rem;
+      border-radius: 50px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      box-shadow: 0 0 25px rgba(0, 170, 255, 0.4);
+      transition: 0.3s;
     }
 
     #hero a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(0, 170, 255, 0.8);
+      transform: scale(1.08);
+      box-shadow: 0 0 35px rgba(0, 170, 255, 0.8);
+      background: linear-gradient(90deg, #1f8fff, #00d4ff);
     }
 
-    /* ===== Sections ===== */
+    /* ==============================
+       SECTION STYLES
+    ===============================*/
     section {
-      padding: 4rem 2rem;
+      padding: 5rem 2rem;
       text-align: center;
-      animation: fadeUp 1.2s ease;
+      animation: fadeUp 1s ease;
     }
 
     h2 {
-      font-size: 2.4rem;
+      font-size: 2.3rem;
+      color: var(--primary);
+      text-shadow: 0 0 15px rgba(0, 170, 255, 0.4);
       margin-bottom: 1.5rem;
-      color: #00aaff;
-      text-shadow: 0 0 12px rgba(0, 170, 255, 0.5);
     }
 
     p {
       max-width: 700px;
       margin: auto;
-      line-height: 1.6;
-      color: #ddd;
+      line-height: 1.7;
+      color: #cfd9e4;
     }
 
-    /* ===== Grid ===== */
+    /* ==============================
+       GRID CARDS
+    ===============================*/
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 2rem;
-      margin-top: 2rem;
+      margin-top: 2.5rem;
     }
 
-    /* ===== Cards ===== */
     .card {
-      background: rgba(10, 25, 45, 0.9);
+      background: linear-gradient(145deg, #0a192f, #091221);
+      border: 1px solid rgba(0, 170, 255, 0.15);
       border-radius: 15px;
       padding: 1.5rem;
       box-shadow: 0 0 15px rgba(0, 170, 255, 0.15);
-      transition: 0.3s ease;
-      border: 1px solid rgba(0, 170, 255, 0.1);
+      transition: 0.4s ease;
+      transform: translateY(0);
     }
 
     .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 0 25px rgba(0, 170, 255, 0.4);
+      transform: translateY(-10px) scale(1.03);
+      box-shadow: 0 0 30px rgba(0, 170, 255, 0.4);
     }
 
     .card img {
       width: 100%;
-      border-radius: 12px;
+      border-radius: 10px;
       margin-bottom: 1rem;
+      transition: 0.4s;
     }
 
-    /* ===== Team Cards ===== */
+    .card img:hover {
+      transform: scale(1.05);
+    }
+
+    /* ==============================
+       TEAM CARDS
+    ===============================*/
     .team-card {
-      background: rgba(20, 35, 60, 0.9);
+      background: linear-gradient(160deg, #0a223f, #09182e);
       padding: 2rem 1rem;
-      border-radius: 15px;
-      transition: 0.3s;
-      border: 1px solid rgba(0, 170, 255, 0.1);
+      border-radius: 20px;
+      border: 1px solid rgba(0, 170, 255, 0.15);
+      transition: 0.4s ease;
     }
 
     .team-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 25px rgba(0, 170, 255, 0.3);
+      transform: translateY(-10px);
+      box-shadow: 0 0 30px rgba(0, 170, 255, 0.3);
     }
 
     .team-card img {
@@ -186,114 +237,115 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid #00aaff;
+      border: 3px solid var(--primary);
       margin-bottom: 1rem;
-      transition: 0.3s;
+      transition: 0.4s;
     }
 
     .team-card img:hover {
-      transform: scale(1.05);
+      transform: scale(1.1);
       box-shadow: 0 0 15px rgba(0, 170, 255, 0.6);
     }
 
     .team-card h3 {
+      color: var(--primary);
       margin: 0.5rem 0;
-      color: #00aaff;
     }
 
     .team-card a {
-      background: linear-gradient(90deg, #00aaff, #145DA0);
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: #fff;
       padding: 0.5rem 1.2rem;
       border-radius: 8px;
-      text-decoration: none;
-      transition: 0.3s;
       font-weight: 600;
+      transition: 0.3s;
+      display: inline-block;
+      margin-top: 0.5rem;
     }
 
     .team-card a:hover {
-      background: linear-gradient(90deg, #00ccff, #1f8fff);
-      box-shadow: 0 0 15px rgba(0, 170, 255, 0.5);
+      background: linear-gradient(90deg, #1f8fff, #00d4ff);
+      box-shadow: 0 0 20px rgba(0, 170, 255, 0.6);
+      transform: scale(1.05);
     }
 
-    /* ===== Textarea ===== */
-    textarea {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(0, 170, 255, 0.3);
-      color: #fff;
-      resize: none;
-      margin-top: 1rem;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    textarea::placeholder {
-      color: #aaa;
-    }
-
-    /* ===== Contact ===== */
+    /* ==============================
+       CONTACT SECTION
+    ===============================*/
     #contact i {
       font-size: 1.8rem;
       margin: 1rem;
-      color: #00aaff;
+      color: var(--primary);
       transition: 0.3s;
     }
 
     #contact i:hover {
       color: #1f8fff;
-      transform: scale(1.2);
-      text-shadow: 0 0 15px #00aaff;
+      transform: scale(1.3);
+      text-shadow: 0 0 20px #00aaff;
     }
 
-    /* ===== Footer ===== */
+    /* ==============================
+       FOOTER
+    ===============================*/
     footer {
-      background: rgba(10, 20, 40, 0.9);
+      background: #010a1b;
       text-align: center;
-      padding: 1.5rem;
-      border-top: 1px solid rgba(0, 170, 255, 0.3);
+      padding: 2rem;
+      border-top: 1px solid rgba(0, 170, 255, 0.2);
     }
 
     footer p {
-      color: #aaa;
+      color: #89a1c1;
       font-size: 0.9rem;
+      letter-spacing: 0.5px;
     }
 
-    /* ===== Animations ===== */
+    /* ==============================
+       ANIMATIONS
+    ===============================*/
     @keyframes fadeIn {
-      from {
+      0% {
         opacity: 0;
         transform: translateY(20px);
       }
 
-      to {
+      100% {
         opacity: 1;
         transform: translateY(0);
       }
     }
 
     @keyframes fadeUp {
-      from {
+      0% {
         opacity: 0;
-        transform: translateY(40px);
+        transform: translateY(50px);
       }
 
-      to {
+      100% {
         opacity: 1;
         transform: translateY(0);
       }
     }
 
-    /* ===== Responsive ===== */
+    /* ==============================
+       RESPONSIVE
+    ===============================*/
     @media (max-width: 768px) {
       header {
         flex-direction: column;
       }
 
       nav {
-        margin-top: 1rem;
+        margin-top: 0.8rem;
       }
 
       #hero h1 {
         font-size: 2.2rem;
+      }
+
+      textarea {
+        width: 90% !important;
       }
     }
   </style>
@@ -437,4 +489,5 @@
   </footer>
 </body>
 </html>
+
 
